--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,10 +40,13 @@ dependencies {
     /**
      *  Import dependencies for room (sqlite abstraction layer lib)
      */
-    def room_version = "2.1.0-alpha07"
-    implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version" // For Kotlin use kapt instead of annotationProcessor
-    testImplementation "androidx.room:room-testing:$room_version"   // Test helpers
+    def room_version = "1.1.1"
+
+    implementation "android.arch.persistence.room:runtime:$room_version"
+    annotationProcessor "android.arch.persistence.room:compiler:$room_version"  // For Kotlin use kapt instead of annotationProcessor
+    implementation "android.arch.persistence.room:rxjava2:$room_version"        // optional - RxJava support for Room
+    implementation "android.arch.persistence.room:guava:$room_version"          // optional - Guava support for Room, including Optional and ListenableFuture
+    testImplementation "android.arch.persistence.room:testing:$room_version"    // Test helpers
 }
 
 repositories {
