--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "de.htwberlin.lora_multihop_visualisation"
-        minSdkVersion 28
+        minSdkVersion 25
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -19,6 +19,10 @@ android {
     compileOptions {
         sourceCompatibility = '1.8'
         targetCompatibility = '1.8'
+    }
+
+    testOptions {
+        unitTests.returnDefaultValues = true
     }
 }
 
@@ -47,6 +51,10 @@ dependencies {
     implementation "android.arch.persistence.room:rxjava2:$room_version"        // optional - RxJava support for Room
     implementation "android.arch.persistence.room:guava:$room_version"          // optional - Guava support for Room, including Optional and ListenableFuture
     testImplementation "android.arch.persistence.room:testing:$room_version"    // Test helpers
+
+    // butterknife
+    implementation 'com.jakewharton:butterknife:9.0.0-rc1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:9.0.0-rc1'
 }
 
 repositories {
