--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,7 +47,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
         </activity>
-        <activity android:name="de.htwberlin.lora_multihop_implementation.components.ndp.NeighbourSetHandler" />
+        <activity android:name="de.htwberlin.lora_multihop_logic.components.ndp.NeighbourSetHandler" />
 
         <uses-library
             android:name="org.apache.http.legacy"
